--- a/test/runner/index.html
+++ b/test/runner/index.html
@@ -14,6 +14,7 @@
   <script src="../lib/chai/chai.js"></script>
   <script src="../lib/mocha/mocha.js"></script>
   <script src="../lib/sinon/sinon-1.5.0.js"></script>
-  <script src="../lib/require/require.js" data-main="../config"></script>
+
+  <script src="../lib/require/require.js" data-main="../../www/js/config"></script>
 </body>
 </html>
