--- a/www/index.html
+++ b/www/index.html
@@ -51,16 +51,5 @@
     </div>
   </div>
 
-  <script src="lib/jquery/jquery.js"></script>
-  <script src="lib/underscore/underscore.js"></script>
-  <script src="lib/rsvp.js"></script>
-
-  <script src="js/app.js"></script>
-  <script src="js/data/search.js"></script>
-  <script src="js/views/likes.js"></script>
-  <script src="js/views/searchForm.js"></script>
-  <script src="js/views/searchResults.js"></script>
-  <script src="js/util.js"></script>
-
-  <script src="js/main.js"></script>
+  <script src="lib/require.js" data-main="js/config"></script>
 </body>
